Added product prices
